--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -49,7 +49,7 @@ This element displays a list of FileThis document resources. Above the list is a
                 @apply --ft-document-panel;
             }
             .heading {
-                font-family: Arial;
+                font-family: Arial, Helvetica, sans-serif;
                 font-size: 14pt;
                 @apply --ft-document-panel-heading;
             }
@@ -65,7 +65,7 @@ This element displays a list of FileThis document resources. Above the list is a
                 @apply --ft-document-panel-button;
             }
             .document-count {
-                font-family: Arial;
+                font-family: Arial, Helvetica, sans-serif;
                 font-size: 14pt;
                 @apply --ft-document-panel-document-count;
             }
