--- a/ft-document-panel-settings.html
+++ b/ft-document-panel-settings.html
@@ -46,15 +46,15 @@ Settings applied to the ft-document-panel.
 
             _initializeSettings: function()
             {
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-showHeading", this.showHeading);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-heading", this.heading);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-grid-button", this.showGridButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-list-button", this.showListButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-preview-button", this.showPreviewButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-upload-button", this.showUploadButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-download-button", this.showDownloadButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-delete-button", this.showDeleteButton);
-                window.FileThis.FtGlobalVariable.propagateValue("ft-document-panel-show-document-count", this.showDocumentCount);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-showHeading", this.showHeading);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-heading", this.heading);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-grid-button", this.showGridButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-list-button", this.showListButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-preview-button", this.showPreviewButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-upload-button", this.showUploadButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-download-button", this.showDownloadButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-delete-button", this.showDeleteButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-document-panel-show-document-count", this.showDocumentCount);
             },
 
         });
