--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -38,8 +38,8 @@ limitations under the License.
 <link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../ft-document-panel-settings.html">
 <link rel="import" href="../ft-document-panel.html">
+<link rel="import" href="../ft-document-panel-settings.html">
 <link rel="import" href="ft-document-panel-settings-editor.html">
 
 
@@ -63,17 +63,31 @@ A panel that displays a list of FileThis documents
             }
         </style>
 
-        <ft-document-panel-settings></ft-document-panel-settings>
+        <!-- Set a couple settings -->
+        <ft-document-panel-settings
+            ft-document-panel-heading="These are your documents"
+            ft-document-panel-show-download-button=false
+        >
+        </ft-document-panel-settings>
 
         <ft-element-demo
-                name="ft-document-panel"
-                class="flex"
-                show-config="true">
-
+            name="ft-document-panel"
+            class="flex"
+            show-config="true"
+        >
             <!-- Settings -->
             <ft-document-panel-settings-editor
                 slot="config"
                 style="height:100%; padding:20px; "
+                ft-document-panel-show-heading="{{ftDocumentPanelShowHeading}}"
+                ft-document-panel-heading="{{ftDocumentPanelHeading}}"
+                ft-document-panel-show-grid-button="{{ftDocumentPanelShowGridButton}}"
+                ft-document-panel-show-list-button="{{ftDocumentPanelShowListButton}}"
+                ft-document-panel-show-preview-button="{{ftDocumentPanelShowPreviewButton}}"
+                ft-document-panel-show-upload-button="{{ftDocumentPanelShowUploadButton}}"
+                ft-document-panel-show-download-button="{{ftDocumentPanelShowDownloadButton}}"
+                ft-document-panel-show-delete-button="{{ftDocumentPanelShowDeleteButton}}"
+                ft-document-panel-show-document-count="{{ftDocumentPanelShowDocumentCount}}"
             >
             </ft-document-panel-settings-editor>
 
@@ -82,6 +96,15 @@ A panel that displays a list of FileThis documents
                 slot="instance"
                 id="panel"
                 style="width:100%; height: 100%; "
+                ft-document-panel-show-heading="{{ftDocumentPanelShowHeading}}"
+                ft-document-panel-heading="{{ftDocumentPanelHeading}}"
+                ft-document-panel-show-grid-button="{{ftDocumentPanelShowGridButton}}"
+                ft-document-panel-show-list-button="{{ftDocumentPanelShowListButton}}"
+                ft-document-panel-show-preview-button="{{ftDocumentPanelShowPreviewButton}}"
+                ft-document-panel-show-upload-button="{{ftDocumentPanelShowUploadButton}}"
+                ft-document-panel-show-download-button="{{ftDocumentPanelShowDownloadButton}}"
+                ft-document-panel-show-delete-button="{{ftDocumentPanelShowDeleteButton}}"
+                ft-document-panel-show-document-count="{{ftDocumentPanelShowDocumentCount}}"
             >
             </ft-document-panel>
 
